Modify sentence about github repo in abstract and add graphics extension priorities

--- a/paper.tex
+++ b/paper.tex
@@ -80,6 +80,8 @@
 	long=Computational Fluid Dynamics,
 }
 
+\DeclareGraphicsExtensions{.eps,.png}
+
 \title{
 Numerical study of extreme mechanical efforts exerted by a turbulent flow on a bluff body by direct and rare-event sampling techniques
 }
@@ -109,7 +111,7 @@ Numerical study of extreme mechanical efforts exerted by a turbulent flow on a b
 	Practical evidence is given that the fast sweeping time of turbulent fluid structures past the obstacle has a strong influence on the efficiency of the rare-event algorithm. 
 	% 
 	While the \ac{ams} algorithm does not yield significant run-time savings as compared to direct sampling, the \ac{gktl} algorithm appears to be effective to sample very efficiently extreme fluctuations of the time-averaged drag and estimate related statistics such as return times.
-      This paper is supplemented by a software repository containing the codes for the simulations and data analysis involved in this study: \url{https://github.com/tlestang/paper_extreme_drag_fluctuations}.
+      Software used for simulations and data processing is available at \url{https://github.com/tlestang/paper_extreme_drag_fluctuations}.
 \end{abstract}
 	
 \include{./texfiles/section1}
