--- a/texfiles/section1.tex
+++ b/texfiles/section1.tex
@@ -5,7 +5,7 @@
 Turbulent flows are important in a variety of natural phenomena, industrial and civil applications.
 Their characteristic feature is the spontaneous development of intense and sporadic motions associated with extreme internal forces \citep{lesieur_book,donzis_sreenivasan_2010,Yeung}.
 ``Extreme'' refers here to fluctuations that can deviate from the mean value by ${\cal{O}}(10)$ standard deviations.
-In engineering, the nature of such extreme dynamical events and their statistics are of crucial interest to predict excessive mechanical efforts, which can threaten the structural integrity of embedded structures \citep{kanev2010}.
+In engineering, the nature of such extreme dynamical events and their statistics are of crucial interest to predict excessive force, which can threaten the structural integrity of embedded structures \citep{kanev2010}.
 %
 
 From the viewpoint of chaotic dynamical systems, turbulence in fluids is linked to non-linearity and strong departure from statistical equilibrium \citep{KRAICHNAN}.
@@ -19,7 +19,7 @@ However, this requires very long simulations since these extreme events are rare
 %	
 % next two paragraphs may be too technical -- Find a way to summarize them in a few sentences accessible to a broad audience in fluid mechanics? Notion of action will be vague for many readers
 %
-In the present work, a computational study of extreme mechanical efforts acting on an immersed bluff body is conducted using both very long time-series (direct sampling) and rare-event sampling techniques.
+In the present work, a computational study of extreme mechanical force acting on an immersed bluff body is conducted using both very long time-series (direct sampling) and rare-event sampling techniques.
 
 
 %
